--- a/app.json
+++ b/app.json
@@ -1,3 +1,66 @@
 {
-  "_comment": "This file is generated. Please edit .homeycompose/app.json instead."
+  "_comment": "This file is generated. Please edit .homeycompose/app.json instead.",
+  "id": "org.volumio.remote",
+  "version": "1.0.0",
+  "compatibility": ">=5.0.0",
+  "sdk": 3,
+  "name": {
+    "en": "Volumio"
+  },
+  "description": {
+    "en": "Bestuur je Volumio speler met Homey"
+  },
+  "category": [
+    "music"
+  ],
+  "permissions": [],
+  "images": {
+    "small": "/assets/images/small.png",
+    "large": "/assets/images/large.png",
+    "xlarge": "/assets/images/xlarge.png"
+  },
+  "author": {
+    "name": "Paul Heetebrij",
+    "email": "paul.heetebrij@freedom.nl"
+  },
+  "drivers": [
+    {
+      "name": {
+        "en": "Music Player"
+      },
+      "class": "speaker",
+      "capabilities": [
+        "speaker_album",
+        "speaker_artist",
+        "speaker_playing",
+        "speaker_position",
+        "speaker_prev",
+        "speaker_repeat",
+        "volume_set",
+        "speaker_track",
+        "volume_down",
+        "volume_mute",
+        "volume_up"
+      ],
+      "images": {
+        "small": "/drivers/music-player/assets/images/small.png",
+        "large": "/drivers/music-player/assets/images/large.png",
+        "xlarge": "/drivers/music-player/assets/images/xlarge.png"
+      },
+      "pair": [
+        {
+          "id": "list_devices",
+          "template": "list_devices",
+          "navigation": {
+            "next": "add_devices"
+          }
+        },
+        {
+          "id": "add_devices",
+          "template": "add_devices"
+        }
+      ],
+      "id": "music-player"
+    }
+  ]
 }
