--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "cm": "npx git-cz"
   },
   "dependencies": {
+    "node-fetch": "^2.6.1",
     "source-map-support": "^0.5.19"
   },
   "devDependencies": {
@@ -18,6 +19,7 @@
     "@types/homey": "npm:homey-apps-sdk-v3-types@^0.1.0",
     "@types/mocha": "^8.2.2",
     "@types/node": "^15.12.2",
+    "@types/node-fetch": "^2.5.10",
     "@types/sinon": "^10.0.2",
     "@types/source-map-support": "^0.5.3",
     "chai": "^4.3.4",
