feat: 🎸 Basis bediening Volumio via REST api
Na een mislukt avontuur met websocket verder gegaan met REST api. Basale
bediening Volumio is gedekt.

--- a/app.json
+++ b/app.json
@@ -212,7 +212,6 @@
       },
       "class": "speaker",
       "capabilities": [
-        "onoff",
         "speaker_album",
         "speaker_artist",
         "speaker_track",
@@ -221,12 +220,10 @@
         "speaker_position",
         "speaker_prev",
         "speaker_next",
-        "speaker_shuffle",
-        "speaker_repeat",
         "volume_set",
+        "volume_up",
         "volume_down",
-        "volume_mute",
-        "volume_up"
+        "volume_mute"
       ],
       "images": {
         "small": "/drivers/music-player/assets/images/small.png",
