--- a/.homeycompose/app.json
+++ b/.homeycompose/app.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "compatibility": ">=5.0.0",
   "sdk": 3,
+  "brandColor": "#11100f",
   "name": {
     "en": "Volumio",
     "nl": "Volumio"
@@ -17,8 +18,7 @@
   "permissions": [],
   "images": {
     "small": "/assets/images/small.png",
-    "large": "/assets/images/large.png",
-    "xlarge": "/assets/images/xlarge.png"
+    "large": "/assets/images/large.png"
   },
   "author": {
     "name": "Paul Heetebrij"
