refactor: 💡 Groot aantal kaarten verwijderd
Er zitten standaard al kaarten in voor de beschikbare capabilities

--- a/app.json
+++ b/app.json
@@ -33,149 +33,9 @@
   },
   "source": "https://github.com/paulheetebrij/org.volumio.remote",
   "flow": {
-    "conditions": [
-      {
-        "id": "is-playing",
-        "title": {
-          "en": "!{{Is|Isn't}} playing",
-          "nl": "Is !{{aan|niet aan}} het afspelen"
-        },
-        "args": [
-          {
-            "type": "device",
-            "name": "device",
-            "filter": "driver_id=music-player"
-          }
-        ]
-      }
-    ],
     "actions": [
       {
-        "id": "play",
-        "title": {
-          "en": "play",
-          "nl": "afspelen"
-        },
-        "args": [
-          {
-            "type": "device",
-            "name": "device",
-            "filter": "driver_id=music-player"
-          }
-        ]
-      },
-      {
-        "id": "stop",
-        "title": {
-          "en": "stop",
-          "nl": "stoppen"
-        },
-        "args": [
-          {
-            "type": "device",
-            "name": "device",
-            "filter": "driver_id=music-player"
-          }
-        ]
-      },
-      {
-        "id": "pause-player",
-        "title": {
-          "en": "pause",
-          "nl": "pauzeren"
-        },
-        "args": [
-          {
-            "type": "device",
-            "name": "device",
-            "filter": "driver_id=music-player"
-          }
-        ]
-      },
-      {
-        "id": "next-track",
-        "title": {
-          "en": "Next",
-          "nl": "Volgende"
-        },
-        "args": [
-          {
-            "type": "device",
-            "name": "device",
-            "filter": "driver_id=music-player"
-          }
-        ]
-      },
-      {
-        "id": "previous-track",
-        "title": {
-          "en": "Previous",
-          "nl": "Vorige"
-        },
-        "args": [
-          {
-            "type": "device",
-            "name": "device",
-            "filter": "driver_id=music-player"
-          }
-        ]
-      },
-      {
-        "id": "shuffle-on",
-        "title": {
-          "en": "Shuffle on",
-          "nl": "Willekeurig aan"
-        },
-        "args": [
-          {
-            "type": "device",
-            "name": "device",
-            "filter": "driver_id=music-player"
-          }
-        ]
-      },
-      {
-        "id": "shuffle-off",
-        "title": {
-          "en": "Shuffle off",
-          "nl": "Willekeurig uit"
-        },
-        "args": [
-          {
-            "type": "device",
-            "name": "device",
-            "filter": "driver_id=music-player"
-          }
-        ]
-      },
-      {
-        "id": "toggle-repeat",
-        "title": {
-          "en": "toggle repeat"
-        },
-        "args": [
-          {
-            "type": "device",
-            "name": "device",
-            "filter": "driver_id=music-player"
-          }
-        ]
-      },
-      {
-        "id": "toggle-shuffle",
-        "title": {
-          "en": "toggle shuffle"
-        },
-        "args": [
-          {
-            "type": "device",
-            "name": "device",
-            "filter": "driver_id=music-player"
-          }
-        ]
-      },
-      {
-        "id": "play-list",
+        "id": "play-playlist",
         "title": {
           "en": "Play playlist",
           "nl": "Speel afspeellijst af"
@@ -197,63 +57,6 @@
               "en": "title",
               "nl": "titel"
             }
-          }
-        ]
-      },
-      {
-        "id": "set-volume",
-        "title": {
-          "en": "Set volume",
-          "nl": "Pas geluidssterkte aan"
-        },
-        "titleFormatted": {
-          "en": "Volume to [[level]]%",
-          "nl": "Geluidssterkte naar [[level]]%"
-        },
-        "args": [
-          {
-            "type": "device",
-            "name": "device",
-            "filter": "driver_id=music-player"
-          },
-          {
-            "type": "number",
-            "name": "level",
-            "placeholder": {
-              "en": "level",
-              "nl": "niveau"
-            },
-            "min": 0,
-            "max": 100,
-            "step": 1
-          }
-        ]
-      },
-      {
-        "id": "mute",
-        "title": {
-          "en": "mute",
-          "nl": "stil"
-        },
-        "args": [
-          {
-            "type": "device",
-            "name": "device",
-            "filter": "driver_id=music-player"
-          }
-        ]
-      },
-      {
-        "id": "unmute",
-        "title": {
-          "en": "unmute",
-          "nl": "niet stil"
-        },
-        "args": [
-          {
-            "type": "device",
-            "name": "device",
-            "filter": "driver_id=music-player"
           }
         ]
       }
