fix: 🐛 Hardcoded ip-adres uit device
Store gevonden. Leertraject.

--- a/.homeycompose/app.json
+++ b/.homeycompose/app.json
@@ -18,7 +18,8 @@
   "permissions": [],
   "images": {
     "small": "/assets/images/small.png",
-    "large": "/assets/images/large.png"
+    "large": "/assets/images/large.png",
+    "xlarge": "/assets/images/xlarge.png"
   },
   "author": {
     "name": "Paul Heetebrij"
