--- a/package.json
+++ b/package.json
@@ -3,11 +3,16 @@
   "version": "1.0.0",
   "main": "app.ts",
   "scripts": {
+    "lint": "eslint . --ext .ts",
+    "lint-and-fix": "eslint . --ext .ts --fix",
     "build": "tsc",
     "test:mocha": "mocha --exit -r ts-node/register",
     "test": "npm run -s test:mocha **/*.spec.ts",
     "precm": "npm run -s build && npm run -s test",
     "cm": "npx git-cz"
+  },
+  "engines": {
+    "node": ">=12.16.1"
   },
   "dependencies": {
     "node-fetch": "^2.6.1",
@@ -22,7 +27,11 @@
     "@types/node-fetch": "^2.5.10",
     "@types/sinon": "^10.0.2",
     "@types/source-map-support": "^0.5.3",
+    "@typescript-eslint/eslint-plugin": "^4.27.0",
+    "@typescript-eslint/parser": "^4.27.0",
     "chai": "^4.3.4",
+    "eslint": "^7.28.0",
+    "eslint-config-athom": "^2.1.0",
     "mocha": "^9.0.0",
     "sinon": "^11.1.1",
     "ts-node": "^10.0.0",
