fix: 🐛 Discovery werkt nu
Discovery werkt. Albumart (voorlopig) uitgezet, want werkt niet goed.
Begin gemaakt aan callback api, dat ipv polling komt .

--- a/.homeycompose/app.json
+++ b/.homeycompose/app.json
@@ -31,5 +31,11 @@
       }
     }
   },
-  "source": "https://github.com/paulheetebrij/org.volumio.remote"
+  "source": "https://github.com/paulheetebrij/org.volumio.remote",
+  "api": {
+    "volumiostatus": {
+      "method": "POST",
+      "path": "/"
+    }
+  }
 }
