style: 💄 Prettier rc geinstalleerd + naamgeving
Prettier rc voor vaste stijl. Device heet nu overal music player (en) of
audio speler (nl)

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,12 +2,18 @@
   "root": true,
   "parser": "@typescript-eslint/parser",
   "plugins": [
-    "@typescript-eslint"
+    "@typescript-eslint",
+    "prettier"
   ],
   "extends": [
     "athom",
     "eslint:recommended",
     "plugin:@typescript-eslint/eslint-recommended",
-    "plugin:@typescript-eslint/recommended"
-  ]
+    "plugin:@typescript-eslint/recommended",
+    "prettier"
+  ],
+  "rules": {
+    "no-console": 1, // Means warning
+    "prettier/prettier": 2 // Means error  }
+  }
 }
