feat: 🎸 Notifications werken. Polling kan eruit

--- a/app.json
+++ b/app.json
@@ -36,7 +36,8 @@
   "api": {
     "volumiostatus": {
       "method": "POST",
-      "path": "/"
+      "path": "/:id",
+      "public": true
     }
   },
   "flow": {
