--- a/.homeycompose/app.json
+++ b/.homeycompose/app.json
@@ -35,7 +35,8 @@
   "api": {
     "volumiostatus": {
       "method": "POST",
-      "path": "/"
+      "path": "/:id",
+      "public": true
     }
   }
 }
