feat: 🎸 Extra trigger cards bij verandering
Tokens kunnen er grotendeels weer uit, want gedekte capabilities geven
al veel weer

--- a/app.json
+++ b/app.json
@@ -51,10 +51,10 @@
         "tokens": [
           {
             "type": "string",
-            "name": "name",
+            "name": "artist",
             "title": {
-              "en": "Name",
-              "nl": "Name"
+              "en": "Artist",
+              "nl": "Artiest"
             },
             "example": {
               "en": "The current artist",
@@ -115,10 +115,10 @@
         "tokens": [
           {
             "type": "string",
-            "name": "name",
+            "name": "artist",
             "title": {
-              "en": "Name",
-              "nl": "Name"
+              "en": "Artist",
+              "nl": "Artiest"
             },
             "example": {
               "en": "The current artist",
@@ -139,10 +139,10 @@
           },
           {
             "type": "string",
-            "name": "title",
+            "name": "artist",
             "title": {
-              "en": "Title",
-              "nl": "Titel"
+              "en": "Artist",
+              "nl": "Artiest"
             },
             "example": {
               "en": "The current title",
@@ -179,10 +179,10 @@
         "tokens": [
           {
             "type": "string",
-            "name": "name",
+            "name": "artist",
             "title": {
-              "en": "Name",
-              "nl": "Name"
+              "en": "Artist",
+              "nl": "Artiest"
             },
             "example": {
               "en": "The current artist",
@@ -243,10 +243,10 @@
         "tokens": [
           {
             "type": "string",
-            "name": "name",
+            "name": "artist",
             "title": {
-              "en": "Name",
-              "nl": "Name"
+              "en": "Artist",
+              "nl": "Artiest"
             },
             "example": {
               "en": "The current artist",
@@ -307,10 +307,10 @@
         "tokens": [
           {
             "type": "string",
-            "name": "name",
+            "name": "artist",
             "title": {
-              "en": "Name",
-              "nl": "Name"
+              "en": "Artist",
+              "nl": "Artiest"
             },
             "example": {
               "en": "The current artist",
@@ -371,10 +371,10 @@
         "tokens": [
           {
             "type": "string",
-            "name": "name",
+            "name": "artist",
             "title": {
-              "en": "Name",
-              "nl": "Name"
+              "en": "Artist",
+              "nl": "Artiest"
             },
             "example": {
               "en": "The current artist",
