--- a/app.json
+++ b/app.json
@@ -10,8 +10,8 @@
     "nl": "Volumio"
   },
   "description": {
-    "en": "Control your Volumio player with Homey",
-    "nl": "Bestuur je Volumio speler met Homey"
+    "en": "All your music in one place",
+    "nl": "Al je muziek op een plaats"
   },
   "category": [
     "music"
