--- a/app.json
+++ b/app.json
@@ -43,36 +43,20 @@
   "flow": {
     "triggers": [
       {
-        "id": "no-playlists-found",
+        "id": "no-results",
         "title": {
-          "en": "No playlists found",
-          "nl": "Geen afspeellijsten gevonden"
+          "en": "The query led to no results",
+          "nl": "Geen resultaten gevonden voor de gebruikte zoekterm"
         },
         "tokens": [
           {
             "type": "string",
-            "name": "wildcard",
+            "name": "class",
             "title": {
-              "en": "wildcard supplied",
-              "nl": "gebruikte zoekterm"
+              "en": "subject",
+              "nl": "soort"
             }
-          }
-        ],
-        "args": [
-          {
-            "type": "device",
-            "name": "device",
-            "filter": "driver_id=music-player"
-          }
-        ]
-      },
-      {
-        "id": "no-tracks-found",
-        "title": {
-          "en": "No tracks found",
-          "nl": "Geen tracks gevonden"
-        },
-        "tokens": [
+          },
           {
             "type": "string",
             "name": "wildcard",
@@ -93,6 +77,20 @@
     ],
     "actions": [
       {
+        "id": "clear-queue",
+        "title": {
+          "en": "Clear queue",
+          "nl": "Maak wachtrij leeg"
+        },
+        "args": [
+          {
+            "type": "device",
+            "name": "device",
+            "filter": "driver_id=music-player"
+          }
+        ]
+      },
+      {
         "id": "play-playlist",
         "title": {
           "en": "Play playlist",
@@ -112,8 +110,8 @@
             "type": "text",
             "name": "wildcard",
             "placeholder": {
-              "en": "wildcard",
-              "nl": "zoekterm"
+              "en": "Piano",
+              "nl": "Piano"
             }
           }
         ]
@@ -138,8 +136,34 @@
             "type": "text",
             "name": "wildcard",
             "placeholder": {
-              "en": "wildcard",
-              "nl": "zoekterm"
+              "en": "Round Midnight",
+              "nl": "Liefde"
+            }
+          }
+        ]
+      },
+      {
+        "id": "play-all-from-artist",
+        "title": {
+          "en": "Play every track from artist",
+          "nl": "Speel alles af van artiest"
+        },
+        "titleFormatted": {
+          "en": "Play every track from [[artist]]",
+          "nl": "Speel alles van [[artist]]"
+        },
+        "args": [
+          {
+            "type": "device",
+            "name": "device",
+            "filter": "driver_id=music-player"
+          },
+          {
+            "type": "autocomplete",
+            "name": "artist",
+            "placeholder": {
+              "en": "Frank Zappa",
+              "nl": "Jantje Koopmans"
             }
           }
         ]
