feat: 🎸 Flowcard: Speel alle favorieten af

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "app.ts",
   "scripts": {
     "install": "npm install",
+    "prettier-predict": "prettier --config .prettierrc '**/*.ts'",
     "prebuild:prettier-format": "prettier --config .prettierrc '**/*.ts' --write",
     "prebuild:lint": "eslint . --ext .ts --fix",
     "prebuild": "npm run -s prebuild:prettier-format && npm run -s prebuild:lint",
