--- a/app.json
+++ b/app.json
@@ -143,6 +143,20 @@
         ]
       },
       {
+        "id": "play-favourites",
+        "title": {
+          "en": "Play track from favourites",
+          "nl": "Speel alle favorieten"
+        },
+        "args": [
+          {
+            "type": "device",
+            "name": "device",
+            "filter": "driver_id=music-player"
+          }
+        ]
+      },
+      {
         "id": "play-all-from-artist",
         "title": {
           "en": "Play every track from artist",
@@ -172,11 +186,11 @@
         "id": "queue-all-artists-from-genre",
         "title": {
           "en": "Queue all artists from genre",
-          "nl": "Plaats alle artiesten van genre in wachtrij"
+          "nl": "Plaats alle artiesten van muziekstijl in wachtrij"
         },
         "titleFormatted": {
-          "en": "Queue every artist from [[genre]]",
-          "nl": "Plaats alle artiesten van van [[genre]] in wachtrij"
+          "en": "Queue every artist genre [[genre]]",
+          "nl": "Plaats alle artiesten van muziekstijl [[genre]] in wachtrij"
         },
         "args": [
           {
@@ -198,11 +212,11 @@
         "id": "queue-all-albums-from-genre",
         "title": {
           "en": "Queue all albums from genre",
-          "nl": "Plaats alle albums van genre in wachtrij"
+          "nl": "Plaats alle albums van muziekstijl in wachtrij"
         },
         "titleFormatted": {
-          "en": "Queue every album from [[genre]]",
-          "nl": "Plaats alle albums van van [[genre]] in wachtrij"
+          "en": "Queue every album from genre [[genre]]",
+          "nl": "Plaats alle albums van muziekstijl [[genre]] in wachtrij"
         },
         "args": [
           {
