feat: 🎸 Flowcards 'device offline' en 'device online'
Naast de flowcards ook de polling verbeterd. De laatste poll start de
nieuwe op. Notifications maken poll overbodig.

--- a/app.json
+++ b/app.json
@@ -73,6 +73,34 @@
             "filter": "driver_id=music-player"
           }
         ]
+      },
+      {
+        "id": "device-offline",
+        "title": {
+          "en": "Volumio audio player unreachable",
+          "nl": "Volumio speler niet bereikbaar"
+        },
+        "args": [
+          {
+            "type": "device",
+            "name": "device",
+            "filter": "driver_id=music-player"
+          }
+        ]
+      },
+      {
+        "id": "device-online",
+        "title": {
+          "en": "Volumio audio player online again",
+          "nl": "Volumio speler weer bereikbaar"
+        },
+        "args": [
+          {
+            "type": "device",
+            "name": "device",
+            "filter": "driver_id=music-player"
+          }
+        ]
       }
     ],
     "actions": [
