--- a/app.json
+++ b/app.json
@@ -45,7 +45,7 @@
       {
         "id": "no-results",
         "title": {
-          "en": "No results",
+          "en": "No result",
           "nl": "Geen resultaat"
         },
         "tokens": [
@@ -61,8 +61,8 @@
             "type": "string",
             "name": "wildcard",
             "title": {
-              "en": "wildcard supplied",
-              "nl": "gebruikte zoekterm"
+              "en": "wildcard",
+              "nl": "zoekterm"
             }
           }
         ],
@@ -77,8 +77,8 @@
       {
         "id": "device-offline",
         "title": {
-          "en": "Volumio audio player unreachable",
-          "nl": "Volumio speler niet bereikbaar"
+          "en": "Device unreachable",
+          "nl": "Apparaat niet bereikbaar"
         },
         "args": [
           {
@@ -91,8 +91,8 @@
       {
         "id": "device-online",
         "title": {
-          "en": "Volumio audio player online again",
-          "nl": "Volumio speler weer bereikbaar"
+          "en": "Device online",
+          "nl": "Apparaat online"
         },
         "args": [
           {
@@ -105,10 +105,10 @@
     ],
     "actions": [
       {
-        "id": "clear-queue",
+        "id": "play-favourites",
         "title": {
-          "en": "Clear queue",
-          "nl": "Maak wachtrij leeg"
+          "en": "Play tracks from favourites",
+          "nl": "Speel favoriete tracks"
         },
         "args": [
           {
@@ -171,21 +171,7 @@
         ]
       },
       {
-        "id": "play-favourites",
-        "title": {
-          "en": "Play track from favourites",
-          "nl": "Speel alle favorieten"
-        },
-        "args": [
-          {
-            "type": "device",
-            "name": "device",
-            "filter": "driver_id=music-player"
-          }
-        ]
-      },
-      {
-        "id": "play-all-from-artist",
+        "id": "play-all-artist",
         "title": {
           "en": "Play every track from artist",
           "nl": "Speel alles af van artiest"
@@ -237,7 +223,21 @@
         ]
       },
       {
-        "id": "queue-all-artists-from-genre",
+        "id": "clear-queue",
+        "title": {
+          "en": "Clear queue",
+          "nl": "Maak wachtrij leeg"
+        },
+        "args": [
+          {
+            "type": "device",
+            "name": "device",
+            "filter": "driver_id=music-player"
+          }
+        ]
+      },
+      {
+        "id": "queue-all-artists-genre",
         "title": {
           "en": "Queue all artists from genre",
           "nl": "Plaats alle artiesten van muziekstijl in wachtrij"
@@ -263,7 +263,7 @@
         ]
       },
       {
-        "id": "queue-all-albums-from-genre",
+        "id": "queue-all-albums-genre",
         "title": {
           "en": "Queue all albums from genre",
           "nl": "Plaats alle albums van muziekstijl in wachtrij"
@@ -289,7 +289,7 @@
         ]
       },
       {
-        "id": "queue-all-albums-from-year",
+        "id": "queue-all-albums-year",
         "title": {
           "en": "Queue all albums from year",
           "nl": "Plaats alle albums van jaar in wachtrij"
@@ -313,6 +313,32 @@
               "min": "1900",
               "max": "2100",
               "step": "1"
+            }
+          }
+        ]
+      },
+      {
+        "id": "listen-favourite-webradiostation",
+        "title": {
+          "en": "Listen to favourite webradiostation",
+          "nl": "Luister naar favoriete webradiozender"
+        },
+        "titleFormatted": {
+          "en": "Listen to favourite webradiostation [[webradiostation]]",
+          "nl": "Luister naar favoriete webradiozender [[webradiostation]]"
+        },
+        "args": [
+          {
+            "type": "device",
+            "name": "device",
+            "filter": "driver_id=music-player"
+          },
+          {
+            "type": "autocomplete",
+            "name": "webradiostation",
+            "placeholder": {
+              "en": "AccuClassical",
+              "nl": "Concertzender"
             }
           }
         ]
