--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "prebuild:lint": "eslint . --ext .ts --fix",
     "prebuild": "npm run -s prebuild:prettier-format && npm run -s prebuild:lint",
     "build": "tsc",
+    "docs": "jsdoc -c jsdoc.json",
+    "docs2": "npx typedoc --excludeInternal",
     "test:mocha": "mocha --exit -r ts-node/register",
     "test": "npm run -s test:mocha **/*.spec.ts",
     "precm": "npm run -s build && npm run -s test",
@@ -43,6 +45,7 @@
     "prettier": "^2.3.1",
     "sinon": "^11.1.1",
     "ts-node": "^10.0.0",
+    "typedoc": "^0.21.4",
     "typescript": "^4.3.4"
   }
 }
